# acme

./: README.md  render.yaml
server/: .env.example  .gitignore  .renderignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
server/acme_import_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/alembic/: README  env.py  script.py.mako
server/alembic/versions/: 001_initial.py  002_add_job_type.py  003_webhooks.py
server/app/: main.py
server/app/api/: health.py  products.py  progress.py  upload.py  webhooks.py
server/app/core/: __init__.py  config.py  db.py  redis_manager.py
server/app/models/: __init__.py  base.py  import_job.py  product.py  webhook.py  webhook_delivery.py
server/app/schemas/: __init__.py  import_job.py  product.py  webhook.py
server/app/services/: __init__.py  csv_validator.py  import_service.py  product_repository.py  webhook_repository.py  webhook_service.py
server/app/tasks/: __init__.py  bulk_delete_tasks.py  celery_app.py  celery_config.py  import_tasks.py  (+2 more)
server/docs/: RAILWAY_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  api_endpoints.md  rabbitmq.md  redis.md
server/scripts/: docker-entrypoint.sh  init-test-db.sh  railway-startup.py  render-startup.py  run_migrations.py  start-api.sh  test_product_crud.py  test_queue_config.py  test_upload_and_progress.py  test_webhooks.py
server/tests/: README.md  conftest.py  test_csv_validator.py  test_import_service.py  test_import_tasks.py  test_product_repository.py  test_progress_endpoint.py  test_progress_manager.py  test_upload_endpoint.py
(+23 files in other folders)
