[project]
name = "acme-import-backend"
version = "0.1.0"
description = "FastAPI + Celery service for large CSV product imports"
authors = [{ name = "Mihir" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.114",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "celery>=5.4",
    "aio-pika>=9.4",
    "redis>=5.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "python-dateutil>=2.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
